force-app/main/default/objects/kfsell__Blue_Sheet__c/kfsell__Blue_Sheet__c.object-meta.xml
<CustomObject>
    <label>Blue Sheet</label>
    <nameField>
        <displayFormat>BS- {00000}</displayFormat>
        <label>Blue Sheet</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blue Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>