force-app/main/default/objects/kfsell__Blue_Sheet__c/fields/kfsell__BI_Total__c.field-meta.xml
<CustomField>
    <fullName>kfsell__BI_Total__c</fullName>
    <label>BI Total</label>
    <summaryForeignKey>kfsell__Buying_Influence__c.kfsell__Blue_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>