force-app/main/default/objects/kfsell__Blue_Sheet__c/fields/kfsell__Competition_Progress__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Competition_Progress__c</fullName>
    <label>Competition Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>