force-app/main/default/objects/kfsell__Blue_Sheet__c/fields/kfsell__Is_Transient__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Is_Transient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Standalone Scorecards are enabled it indicates if Bluesheet was created and linked to opportunity. False = linked, True = not linked</description>
    <label>Is Transient</label>
    <type>Checkbox</type>
</CustomField>