force-app/main/default/objects/kfsell__Blue_Sheet__c/fields/kfsell__Plan_Checklist_AP_Perspective_NoValue__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Plan_Checklist_AP_Perspective_NoValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan Checklist AP Perspective NoValue</label>
    <type>Checkbox</type>
</CustomField>