force-app/main/default/objects/kfsell__Blue_Sheet__c/fields/kfsell__Position_Checklist_CSO_EOO__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Position_Checklist_CSO_EOO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Position Checklist CSO EOO</label>
    <type>Checkbox</type>
</CustomField>