force-app/main/default/objects/kfsell__Blue_Sheet__c/fields/kfsell__Start_Deal_Review__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Start_Deal_Review__c</fullName>
    <description>Start Deal Review</description>
    <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/view?c__inReview=true&quot;, &quot;Start Deal Review&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Deal Review</label>
    <type>Text</type>
</CustomField>