force-app/main/default/objects/kfsell__Blue_Sheet__c/fields/kfsell__TBI_Count__c.field-meta.xml
<CustomField>
    <fullName>kfsell__TBI_Count__c</fullName>
    <label>TBI Count</label>
    <summaryFilterItems>
        <field>kfsell__Buying_Influence__c.kfsell__Technical__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>kfsell__Buying_Influence__c.kfsell__Blue_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>