force-app/main/default/objects/kfsell__Blue_Sheet__c/validationRules/kfsell__Progress_Field_Backward_Prevention.validationRule-meta.xml
<ValidationRule>
    <fullName>kfsell__Progress_Field_Backward_Prevention</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
(ISPICKVAL(PRIORVALUE(kfsell__Progress__c),&quot;Initialized&quot;)), ISPICKVAL(kfsell__Progress__c ,&quot;Not Started&quot;)
),
AND(
(ISPICKVAL(PRIORVALUE(kfsell__Progress__c),&quot;In Progress&quot;)), ISPICKVAL(kfsell__Progress__c ,&quot;Not Started&quot;)
),
AND(
(ISPICKVAL(PRIORVALUE(kfsell__Progress__c),&quot;In Progress&quot;)), ISPICKVAL(kfsell__Progress__c ,&quot;Initialized&quot;)
)
)</errorConditionFormula>
    <errorMessage>The Status cannot be moved backwards</errorMessage>
</ValidationRule>