force-app/main/default/objects/kfsell__Blue_Sheet__c/listViews/kfsell__All.listView-meta.xml
<ListView>
    <fullName>kfsell__All</fullName>
    <columns>NAME</columns>
    <columns>kfsell__Progress__c</columns>
    <columns>kfsell__Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>